[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bullmq"
version = "2.18.3"
description='BullMQ for Python'
readme="README.md"
authors = [
    {name = "Taskforce.sh Inc.", email = "manast@taskforce.sh"},
]
requires-python = ">=3.10.0"
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.10',
]
keywords = ["python", "bullmq", "queues"]
dependencies = [
    "redis ==6.4.0",
    "msgpack ==1.1.2",
    "semver ==3.0.4"
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.3.3",
    "build==0.8.0",
    "types-redis==4.6.0.2"
]

[project.urls]
"Homepage" = "https://bullmq.io"
"Bug Tracker" = "https://github.com/taskforcesh/bullmq/issues"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
bullmq = ["commands/*.lua", "types/*"]
