[package]
name = "bullmq-official"
version = "1.1.1"
edition = "2021"
rust-version = "1.85"
authors = ["Taskforce.sh Inc."]
description = "A powerful, fast, and robust job queue for Rust backed by Redis"
license = "MIT"
repository = "https://github.com/taskforcesh/bullmq"
homepage = "https://bullmq.io"
documentation = "https://docs.rs/bullmq-official"
readme = "README.md"
keywords = ["queue", "job", "redis", "worker", "background"]
categories = ["asynchronous", "database"]
include = [
  "src/**/*.rs",
  "src/commands/*.lua",
  "README.md",
  "Cargo.toml",
]

# The published crate is `bullmq-official` (the `bullmq`, `bullmq-rust` and
# `bullmq-rs` names on crates.io are taken by unrelated third-party crates).
# The library itself is still imported as `bullmq` so user code (and our
# tests/examples) can `use bullmq::...`.
[lib]
name = "bullmq"

[dependencies]
redis = { version = "=0.27.6", features = ["tokio-comp", "connection-manager", "script", "tokio-rustls-comp", "tls-rustls-webpki-roots"] }
tokio = { version = "=1.52.3", features = ["full"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
thiserror = "=2.0.18"
uuid = { version = "=1.23.1", features = ["v4"] }
sha1 = "=0.11.0"
tracing = "=0.1.44"
chrono = { version = "=0.4.44", features = ["serde"] }
rmp = "=0.8.15"
rmp-serde = "=1.3.1"
async-trait = "=0.1.89"
tokio-stream = "=0.1.18"
futures = "=0.3.32"
croner = "=3.0.1"
chrono-tz = "=0.10.4"

[dev-dependencies]
tokio = { version = "=1.52.3", features = ["full", "test-util"] }
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
rand = "=0.8.6"
